feat: torna stories cumulativos e inicia fotos extras apos moderacao